chore(project): update package.json and tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "jsx": "react-native",
     "outDir": "build",
-    "rootDir": "src/",
+    "rootDir": "src",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
     "experimentalDecorators": true,
@@ -18,8 +18,8 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
     "skipLibCheck": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "lib": ["es6", "es7", "es2017", "dom"]
   },
-  "exclude": ["*.js", "build", "node_modules"],
-  "compileOnSave": false
+  "exclude": ["*.js", "build", "node_modules"]
 }
